# wyas

./: .ghci  .gitignore  .repos  LICENSE  todo.txt  wyas.cabal
app/: Datatypes.hs  ErrorHandling.hs  Evaluator.hs  Evaluators.hs  GeneralParsers.hs  LispValParsers.hs  Main.hs  NumberParsers.hs  Primitives.hs  StringParsers.hs  Tests.hs
