cabal-version:      3.0
name:               wyas
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Dylan Sommer
maintainer:         dylansommer96@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable wyas
    import:           warnings
    main-is:          Main.hs
    other-modules:    RefactoredMain
                      StringParsers
    -- other-extensions:
    build-depends:    base,
                      parsec
    hs-source-dirs:   app
    default-language: Haskell2010
